--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
-  - "7.10"
+  - "6"
+  - "7"
 
-branches:
-  only:
-    - master
+#branches:
+#  only:
+#    - master
+
+sudo: false
 
 before_script:
   - npm run rebuild
