Add npm script 'lint' that runs tslint. Change 'require()' action loading stylesheet: get as string rather than loading to the dom.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build:dist:dev": "webpack --config webpack.config.js",
     "build:dist:prod": "cross-env NODE_ENV=production webpack -p --config webpack.config.js",
     "clean": "rimraf ./bin ./declarations ./dist",
+    "lint": "tslint ./src/**/*.ts -t verbose",
     "test": "node --harmony ./node_modules/jasmine-node/bin/jasmine-node --verbose bin/spec",
     "start": "node --harmony ./bin/app.js",
     "postinstall": "run-s --silent rebuild",
@@ -79,6 +80,8 @@
     "shx": "^0.2.2",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.1",
+    "to-string-loader": "^1.1.5",
+    "tslint": "^5.4.3",
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.3",
     "url-loader": "^0.5.8",
