Change unit test package from 'jasmine-node' to 'jasmine'.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:dist:prod": "cross-env NODE_ENV=production webpack -p --config webpack.config.js",
     "clean": "rimraf ./bin ./declarations ./dist",
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "test": "node --harmony ./node_modules/jasmine-node/bin/jasmine-node --verbose bin/spec",
+    "test": "jasmine",
     "start": "node --harmony ./bin/app.js",
     "postinstall": "run-s --silent rebuild",
     "prepublish": "run-s --silent rebuild test clean",
@@ -68,7 +68,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
-    "jasmine-node": "^1.14.5",
+    "jasmine": "^2.6.0",
+    "jasmine-spec-reporter": "^4.1.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
@@ -81,8 +82,8 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.1",
     "to-string-loader": "^1.1.5",
-    "tslint": "^5.4.3",
     "ts-loader": "^2.1.0",
+    "tslint": "^5.4.3",
     "typescript": "^2.3.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1"
